# dunamai

./: .coveragerc  .envrc  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  README.md  mkdocs.yaml  pyproject.toml  tasks.py  tox.ini
.github/workflows/: main.yaml
docs/: dunamai.1  index.md  requirements.txt
dunamai/: __init__.py  __main__.py  formatters.py
tests/: test_dunamai.py  test_main.py
tests/archival/git-tagged/: .git_archival.json
tests/archival/git-tagged-post/: .git_archival.json
tests/archival/git-untagged/: .git_archival.json
tests/archival/hg-tagged/: .hgtags
tests/integration/: test_dunamai.py
tests/integration/archival-hg-tagged/: .hg_archival.txt
tests/integration/archival-hg-untagged/: .hg_archival.txt
tests/unit/: test_dunamai.py  test_main.py
