[tool.poetry]
name = "dunamai"
version = "1.6.0"
description = "Dynamic version generation"
license = "MIT"
authors = ["Matthew T. Kennerly <mtkennerly@gmail.com>"]
readme = "README.md"
repository = "https://github.com/mtkennerly/dunamai"
keywords = ["version", "versioning", "dynamic"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]

[tool.poetry.dependencies]
python = "^3.6.2"
packaging = "^21.0"
importlib-metadata = {version = "^4.8.1", python = "<3.8"}

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pre-commit = "^2.15"
pytest-cov = "^3.0.0"
tox = "^3.24.4"
black = { version = "^21.9b0", allow-prereleases = true, python = "^3.6" }
flake8 = "^3.9.2"
mypy = "^0.910"
tox-venv = "^0.4.0"
pep8-naming = "^0.12.1"
isort = "^5.9.3"

[tool.poetry.scripts]
dunamai = 'dunamai.__main__:main'

[tool.black]
line-length = 100

[tool.isort]
known_first_party = ['dunamai']
line_length = 100
profile = 'black'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
