[tool.poetry]
name = "dunamai"
version = "1.13.1"
description = "Dynamic version generation"
license = "MIT"
authors = ["Matthew T. Kennerly <mtkennerly@gmail.com>"]
readme = "README.md"
repository = "https://github.com/mtkennerly/dunamai"
keywords = ["version", "versioning", "dynamic"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]

[tool.poetry.dependencies]
python = "^3.5"
packaging = ">=20.9"  # 20.9 is the last with Python 3.5 compat
importlib-metadata = {version = ">=1.6.0", python = "<3.8"}  # 2.1.1 is the last with Python 3.5 compat

[tool.poetry.dev-dependencies]
pytest = "^3.0"
pre-commit = "^1.14"
pytest-cov = "^2.6"
tox = "^3.7"
black = { version = "^18.3-alpha.0", allow-prereleases = true, python = "^3.6" }
flake8 = "^3.7"
mypy = "^0.740"
tox-venv = "^0.4.0"
pep8-naming = "^0.8.2"

[tool.poetry.scripts]
dunamai = 'dunamai.__main__:main'

[tool.black]
line-length = 100

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
