[tool.poetry]
name = "dunamai"
version = "1.19.2"
description = "Dynamic version generation"
license = "MIT"
authors = ["Matthew T. Kennerly <mtkennerly@gmail.com>"]
readme = "README.md"
repository = "https://github.com/mtkennerly/dunamai"
keywords = ["version", "versioning", "dynamic"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
include = [
    { path = "CHANGELOG.md", format = "sdist" },
    { path = "tests", format = "sdist" },
]

[tool.poetry.dependencies]
python = ">=3.5"
packaging = ">=20.9"  # 20.9 is the last with Python 3.5 compat
importlib-metadata = {version = ">=1.6.0", python = "<3.8"}  # 2.1.1 is the last with Python 3.5 compat

[tool.poetry.dev-dependencies]
pytest = [
    { version = "^7.2", python = "^3.7" },
    { version = "^3.0", python = ">=3.5,<3.7" },
]
pre-commit = { version = "^2.20", python = "^3.7" }
pytest-cov = [
    { version = "^4.0", python = "^3.7" },
    { version = "^2.6", python = ">=3.5,<3.7" },
]
black = { version = "22.1.0", python = "^3.7" }
mypy = { version = "^0.982", python = "^3.7" }
ruff = {version = "^0.0.272", python = "^3.7"}

[tool.poetry.scripts]
dunamai = 'dunamai.__main__:main'

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
extend-select = ["W605", "N"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
